@@ -21,6 +21,7 @@
 ##
 export CALLMONITOR_ENABLED='yes'
 export CALLMONITOR_DEBUG='no'
+export CALLMONITOR_DUMP='no'
 export CALLMONITOR_REVERSE='yes'
 export CALLMONITOR_REVERSE_CACHE='transient'
 export CALLMONITOR_REVERSE_PROVIDER='dasoertliche'
