@@ -34,6 +34,8 @@ CALLMONITOR_LISTENERS="$flash/callmonitor/listeners-1"
 CALLMONITOR_PERSISTENT="$flash/callmonitor/callers"
 CALLMONITOR_TRANSIENT="$CALLMONITOR_TMPDIR/callers"
 
+CALLMONITOR_DUMPFILE="$CALLMONITOR_TMPDIR/callmonitor.dump"
+
 CALLMONITOR_DOC_URL='http://wiki.ip-phone-forum.de/software:callmonitor:start'
 CALLMONITOR_FORUM_URL='http://www.ip-phone-forum.de/showthread.php?t=100706'
 
